--- a/style.css
+++ b/style.css
@@ -24,3 +24,98 @@ body{
   box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.2);/*影を小さく*/
   border-bottom: none;
 }
+
+.aboutTopic{
+  top: 0px;
+  left: 764px;
+  width: 393px;
+  height: 263px;
+  text-align: center;
+  font: Regular 150px/263px Pacifico;
+  letter-spacing: 0;
+  color: #271616;
+  opacity: 1;
+}
+
+.aboutColums{
+  top: 263px;
+  left: 371px;
+  width: 1298px;
+  height: 441px;
+  text-align: left;
+  font: Medium 40px/68px YuKyokasho Yoko;
+  letter-spacing: 0;
+  color: #271616;
+  opacity: 1;
+}
+
+.aboutLink{
+  top: 853px;
+  left: 1305px;
+  width: 585px;
+  height: 167px;
+  text-align: center;
+  font: Regular 100px/175px Pacifico;
+  letter-spacing: 0;
+  color: #271616;
+  opacity: 1;
+}
+
+.aboutBack{
+  top: 0px;
+  left: 0px;
+  width: 1920px;
+  height: 1080px;
+  background: transparent url('img/about.png') 0% 0% no-repeat padding-box;
+  opacity: 1;
+}
+
+.homeTopic{
+  top: 188px;
+  left: 352px;
+  width: 1217px;
+  height: 352px;
+  text-align: center;
+  font: Regular 200px/352px Pacifico;
+  letter-spacing: 0;
+  color: #271616;
+  opacity: 1;
+}
+
+.homeToAbout{
+  top: 669px;
+  left: 470px;
+  width: 236px;
+  height: 236px;
+  background: transparent url('img/que.png') 0% 0% no-repeat padding-box;
+  border: 1px solid #707070;
+  opacity: 1;
+}
+
+.homeToCam{
+  top: 669px;
+  left: 1214px;
+  width: 236px;
+  height: 236px;
+  background: transparent url('img/cam.png') 0% 0% no-repeat padding-box;
+  border: 1px solid #707070;
+  opacity: 1;
+}
+
+.homeBack{
+  top: 0px;
+  left: 0px;
+  width: 1920px;
+  height: 1080px;
+  background: transparent url('img/home.png') 0% 0% no-repeat padding-box;
+  opacity: 1;
+}
+
+.cameraBack{
+  top: 0px;
+  left: 0px;
+  width: 1920px;
+  height: 1081px;
+  background: transparent url('img/camera.png') 0% 0% no-repeat padding-box;
+  opacity: 1;
+}
